[project]
name = "payment-app"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
    "celery>=5.5.2",
    "daphne>=4.1.2",
    "django>=5.2",
    "django-unfold>=0.55.3",
    "redis>=6.0.0",
    "ruff>=0.11.8",
    "whitenoise>=6.9.0",
]
